@@ -2,6 +2,9 @@ dir=@PKGDATADIR@/presets/
 name=abra-kadabra
 name=ak
 command=--read-from-file 4,abra-kadabra.sh
+name=amateur-star
+name=as
+command=--read-from-file 4,amateur-star.sh
 name=blue-yonder
 name=by
 command=--read-from-file 4,blue-yonder.sh
