@@ -800,6 +800,8 @@ Presets that are shipped with Freecell Solver:
 [cols="20%,80%"]
 |===================================================
 |+abra-kadabra+                |a meta-moves preset
+|+amateur-star+                |a meta-moves preset that yields solutions
+faster on average than +three-eighty+.
 |+blue-yonder+                 |a meta-moves preset generated by a
 quota optimization algorithm.
 |+children-playing-ball+       |a meta-moves and flare-based preset that tends
